--- a/Contact.html
+++ b/Contact.html
@@ -1,89 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <style>
-            body {
-                background-color: darkcyan;
-                margin: 0;
-                padding: 0;
-                font-family: 'Georgia', serif;
-                color: #333;
-            }
-            h1 {
-                text-align: left;
-                margin-top: 50px;
-                font-size: 2.5em;
-                color: brown;
-            }
-            .contact-container {
-                max-width: 600px;
-                margin: 50px auto;
-                padding: 20px;
-                background-color: rgb(215, 214, 214);
-                border-radius: 10px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                font-size: 1.2em;
-                line-height: 1.8;
-            }
-            .contact-container b {
-                color: darkmagenta;
-            }
-            .contact-container p {
-                margin: 15px 0;
-            }
-            .navbar {
-                position: fixed;
-                top: 10px;
-                right: 10px;
-                display: flex;
-                flex-direction: row;
-                gap: 20px;
-                padding: 10px 20px;
-                background-color: rgba(0, 0, 0, 0.2);
-                border-radius: 10px;
-            }
-            .navbar a {
-                text-decoration: none;
-                color: white;
-                font-size: 1.2rem;
-                padding: 5px;
-                transition: color 0.3s ease;
-            }
-            .navbar a:hover {
-                color: blue;
-            }
-            .linkedin-icon {
-                color: white;
-                font-size: 1.5em;
-                transition: color 0.3s ease;
-            }
-            .linkedin-icon:hover {
-                color: lightskyblue;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Contact Me :</h1>
-        <div class="contact-container">
-            <p><b>Address:</b> 29/177C6, Nandyal</p>
-            <p><b>Mobile:</b> 9059399930</p>
-            <p><b>Email:</b> 22am1a3122@svrec.ac.in</p>
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-        <div class="navbar">
-            <a href="index.html">Home</a>
-            <a href="About me.html">About me</a>
-            <a href="Academic Qualification.html">Academic Qualification</a>
-            <a href="Skills.html">Skills</a>
-            <a href="certificates.html">Certificates</a>
-            <a href="Contact.html">Contact</a>
-            <a href="https://www.linkedin.com/feed/">
-                <i class="fab fa-linkedin linkedin-icon"></i>
-            </a>
+    <style>
+        body {
+            background-color: darkcyan;
+            font-family: 'Georgia', serif;
+            color: #333;
+        }
+        h1 {
+            text-align: left;
+            margin-top: 30px;
+            font-size: 2.2em;
+            color: brown;
+        }
+        p{
+            text-align: justify;
+        }
+        .contact-container {
+            background-color: rgb(215, 214, 214);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            font-size: 1.2em;
+            line-height: 1.8;
+            text-align: center;
+        }
+        .contact-container b {
+            color: darkmagenta;
+        }
+        .navbar-brand, .nav-link {
+            color: white !important;
+        }
+        .navbar {
+            background-color: rgba(0, 0, 0, 0.6);
+        }
+        .linkedin-icon {
+            color: white;
+            font-size: 1.5em;
+            transition: color 0.3s ease;
+        }
+        .linkedin-icon:hover {
+            color: rgb(1, 3, 4);
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About me.html">About me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Academic Qualification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/feed/">
+                            <i class="fab fa-linkedin linkedin-icon"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </body>
+    </nav>
+
+    <!-- Contact Section -->
+    <div class="container mt-5 pt-5">
+        <h1>Contact Me :</h1>
+        <div class="row justify-content-center mt-4">
+            <div class="col-md-6 col-sm-10 contact-container">
+                <p><b>Address:</b> 29/177C6, Nandyal</p>
+                <p><b>Mobile:</b> 9059399930</p>
+                <p><b>Email:</b> 22am1a3122@svrec.ac.in</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
