--- a/About me.html
+++ b/About me.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Profile</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: darkcyan;
+            background-color: #0a2525;
             font-family: 'Georgia', serif;
             color: #333;
         }
@@ -16,29 +16,33 @@
         h1 {
             margin-top: 70px;
             font-size: 2.5rem;
-            color: brown;
+            color: #2fb4bb;
             text-align: left;
+            font-family: serif;
         }
         p{
             text-align: justify;
+            color: white;
+            font-family: serif;
+            font-size: 1.1rem;
         }
         .content {
-            background-color: #c4c2c2;
+            background-color: #5b767f;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 20px;
         }
 
         .content h2 {
-            color: darkmagenta;
+            color: rgb(246, 5, 246);
             font-size: 1.8rem;
             text-align: left;
         }
 
         .navbar-custom {
-            background-color: rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
-            padding: 10px 20px;
+            background-color: #2fb4bb;
+            padding: 10px;
+            height: 50px;
         }
 
         .navbar-custom .nav-link {
@@ -47,7 +51,7 @@
         }
 
         .navbar-custom .nav-link:hover {
-            color: blue;
+            color: rgb(2, 2, 16);
         }
 
         .linkedin-icon {
@@ -93,8 +97,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="About me.html">About me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Academic Qualification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About me.html">Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Credentials</a></li>
                     <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
