--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-        <div class="container">
+        <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>5
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
