--- a/index.html
+++ b/index.html
@@ -76,27 +76,24 @@
 
         .navbar-custom {
             background-color: #2fb4bb;
-            padding: 10px;
-            height: 50px;
+            border-radius: 10px;
         }
-
         .navbar-custom .nav-link {
             color: white;
             font-size: 1.2rem;
-            transition: color 0.3s ease;
+            transition: color 0.3s ease, background-color 0.3s ease;
         }
-
         .navbar-custom .nav-link:hover {
-            color: rgb(0, 5, 7);
+            color: rgb(5, 4, 18);
+            border-radius: 5px;
         }
-
         .linkedin-icon {
-            font-size: 1.5rem;
+            color: white;
+            font-size: 1.5em;
             transition: color 0.3s ease;
         }
-
         .linkedin-icon:hover {
-            color: rgb(2, 5, 7);
+            color: rgb(2, 10, 15);
         }
 
         @media (max-width: 768px) {
@@ -118,7 +115,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>5
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -141,7 +138,7 @@
 
     <div class="container mt-5">
         <div class="profile-section">
-            <img src="pic.jpg" alt="Profile Picture">
+            <img src="images/pic.jpg" alt="Profile Picture">
             <div class="text-content">
                 <h1>Chandrakantham Bhavana</h1>
                 <h2>Self Introduction :</h2>
