--- a/About me.html
+++ b/About me.html
@@ -41,27 +41,24 @@
 
         .navbar-custom {
             background-color: #2fb4bb;
-            padding: 10px;
-            height: 50px;
+            border-radius: 10px;
         }
-
         .navbar-custom .nav-link {
-            color: rgb(250, 250, 250);
-            transition: color 0.3s ease;
+            color: white;
+            font-size: 1.2rem;
+            transition: color 0.3s ease, background-color 0.3s ease;
         }
-
         .navbar-custom .nav-link:hover {
-            color: rgb(2, 2, 16);
+            color: rgb(5, 4, 18);
+            border-radius: 5px;
         }
-
         .linkedin-icon {
             color: white;
-            font-size: 1.5rem;
+            font-size: 1.5em;
             transition: color 0.3s ease;
         }
-
         .linkedin-icon:hover {
-            color: rgb(22, 26, 28);
+            color: rgb(2, 10, 15);
         }
 
         @media (max-width: 768px) {
