--- a/Academic Qualification.html
+++ b/Academic Qualification.html
@@ -13,7 +13,7 @@
         body {
             background-color: #0a2525;
             font-family: 'Georgia', serif;
-            color: white;
+            color: #333;
         }
 
         .qualification-section {
@@ -40,34 +40,31 @@
         p {
             font-size: 1.1rem;
             line-height: 1.5;
-            color: black;
+            color: rgb(252, 250, 250);
             font-family: serif;
         }
 
         /* Custom navbar styling */
         .navbar-custom {
             background-color: #2fb4bb;
-            padding: 10px;
             border-radius: 10px;
         }
-
         .navbar-custom .nav-link {
             color: white;
-            font-size: 1.1rem;
-            transition: color 0.3s ease;
+            font-size: 1.2rem;
+            transition: color 0.3s ease, background-color 0.3s ease;
         }
-
         .navbar-custom .nav-link:hover {
-            color: rgb(3, 14, 17);
+            color: rgb(5, 4, 18);
+            border-radius: 5px;
         }
-
         .linkedin-icon {
-            font-size: 1.5rem;
+            color: white;
+            font-size: 1.5em;
             transition: color 0.3s ease;
         }
-
         .linkedin-icon:hover {
-            color: rgb(1, 14, 21);
+            color: rgb(2, 10, 15);
         }
 
         @media (max-width: 768px) {
