--- a/certificates.html
+++ b/certificates.html
@@ -8,20 +8,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: darkcyan;
+            background-color: #0a2525;
             font-family: serif;
         }
         h1 {
-            color: brown;
+            color: #2fb4bb;
             text-align: left;
             padding: 20px;
         }
         .certificate-container img {
             width: 100%;
             max-width: 250px;
-            margin: 10px;
+            margin: 5px;
             border: 5px solid goldenrod;
-            border-radius: 10px;
+            border-radius: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
@@ -30,7 +30,7 @@
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
         .navbar-custom {
-            background-color: rgba(0, 0, 0, 0.2);
+            background-color: #2fb4bb;
             border-radius: 10px;
         }
         .navbar-custom .nav-link {
@@ -39,11 +39,11 @@
             transition: color 0.3s ease, background-color 0.3s ease;
         }
         .navbar-custom .nav-link:hover {
-            color: rgb(26, 19, 241);
+            color: rgb(5, 4, 18);
             border-radius: 5px;
         }
         .linkedin-icon {
-            color: white;5
+            color: white;
             font-size: 1.5em;
             transition: color 0.3s ease;
         }
@@ -62,7 +62,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="About me.html">About Me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Academic Qualification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Credentials</a></li>
                     <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
@@ -80,19 +80,19 @@
         <h1>Certificates :</h1>
         <div class="row certificate-container justify-content-center">
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="c1.jpg" alt="Certificate 1">
+                <img src="images/c1.jpg" alt="Certificate 1">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="c2.jpg" alt="Certificate 2">
+                <img src="images/c2.jpg" alt="Certificate 2">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="c3.jpg" alt="Certificate 3">
+                <img src="images/c3.jpg" alt="Certificate 3">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="c4.jpg" alt="Certificate 4">
+                <img src="images/c4.jpg" alt="Certificate 4">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="c5.jpg" alt="Certificate 5">
+                <img src="images/c5.jpg" alt="Certificate 5">
             </div>
         </div>
     </div>
