--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
 
     <style>
         body {
-            background-color: darkcyan;
+            background-color: #0a2525;
             font-family: 'Georgia', serif;
             color: #333;
         }
@@ -18,28 +18,38 @@
             text-align: left;
             margin-top: 30px;
             font-size: 2.2em;
-            color: brown;
+            color: #2fb4bb;
+            font-family: se;
         }
         p{
             text-align: justify;
+            font-family: serif;
         }
         .contact-container {
-            background-color: rgb(215, 214, 214);
+            background-color: #5b767f;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             font-size: 1.2em;
             line-height: 1.8;
             text-align: center;
+            color: white;
         }
         .contact-container b {
-            color: darkmagenta;
+            color: rgb(246, 5, 246);
         }
-        .navbar-brand, .nav-link {
-            color: white !important;
+        .navbar-custom {
+            background-color: #2fb4bb;
+            border-radius: 10px;
         }
-        .navbar {
-            background-color: rgba(0, 0, 0, 0.6);
+        .navbar-custom .nav-link {
+            color: white;
+            font-size: 1.2rem;
+            transition: color 0.3s ease, background-color 0.3s ease;
+        }
+        .navbar-custom .nav-link:hover {
+            color: rgb(5, 4, 18);
+            border-radius: 5px;
         }
         .linkedin-icon {
             color: white;
@@ -47,29 +57,28 @@
             transition: color 0.3s ease;
         }
         .linkedin-icon:hover {
-            color: rgb(1, 3, 4);
+            color: rgb(2, 10, 15);
         }
     </style>
 </head>
 <body>
 
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>5
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="About me.html">About me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Academic Qualification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About me.html">Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Credentials</a></li>
                     <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/feed/">
+                        <a class="nav-link" href="https://www.linkedin.com/feed/" target="_blank">
                             <i class="fab fa-linkedin linkedin-icon"></i>
                         </a>
                     </li>
