--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <div class="container mt-5">
         <div class="profile-section">
-            <img src="images/pic.jpg" alt="Profile Picture">
+            <img src="pic.jpg" alt="Profile Picture">
             <div class="text-content">
                 <h1>Chandrakantham Bhavana</h1>
                 <h2>Self Introduction :</h2>
