--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #0a2525;
+            background-color: #f4f7fc;
             font-family: Arial, sans-serif;
-            color: white;
+            color: #333;
         }
 
         .container {
@@ -33,7 +33,6 @@
             width: 200px;
             height: 200px;
             border-radius: 50%;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
 
         .text-content {
@@ -42,13 +41,13 @@
         }
 
         h1 {
-            color: #2fb4bb;
+            color: #002b5b;
             font-size: 2rem;
             font-family: serif;
         }
 
         h2 {
-            color: rgb(189, 31, 189);
+            color: #004085;
             font-size: 1.8rem;
             font-family: serif;
         }
@@ -57,35 +56,21 @@
             font-size: 1.1rem;
             line-height: 1.5;
             text-align: justify;
-            font-family:serif;
-            color:rgb(255, 250, 250)
-        }
-
-        hr {
-            border: 1px solid yellowgreen;
-            width: 100%;
-            margin: 15px 0;
-        }
-
-        .additional-info {
-            font-size: 1rem;
-            line-height: 1.5;
-            text-align: justify;
             font-family: serif;
+            color: #444;
         }
 
         .navbar-custom {
-            background-color: #2fb4bb;
+            background-color: #002b5b;
             border-radius: 10px;
         }
         .navbar-custom .nav-link {
             color: white;
             font-size: 1.2rem;
-            transition: color 0.3s ease, background-color 0.3s ease;
+            transition: color 0.3s ease;
         }
         .navbar-custom .nav-link:hover {
-            color: rgb(5, 4, 18);
-            border-radius: 5px;
+            color: #ffc107;
         }
         .linkedin-icon {
             color: white;
@@ -93,21 +78,7 @@
             transition: color 0.3s ease;
         }
         .linkedin-icon:hover {
-            color: rgb(2, 10, 15);
-        }
-
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 1.8rem;
-            }
-
-            h2 {
-                font-size: 1.5rem;
-            }
-
-            p, .additional-info {
-                font-size: 1rem;
-            }
+            color: #ffc107;
         }
     </style>
 </head>
@@ -115,8 +86,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>5
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
@@ -136,25 +107,23 @@
         </div>
     </nav>
 
-    <div class="container mt-5">
+    <div class="container mt-5 pt-5">
         <div class="profile-section">
             <img src="pic.jpg" alt="Profile Picture">
             <div class="text-content">
                 <h1>Chandrakantham Bhavana</h1>
                 <h2>Self Introduction :</h2>
                 <p>
-                    Hello! My name is C. Bhavana, and I am currently focused on completing my undergraduate degree (B.Tech) and securing a job in the software industry.
+                    Hello! My name is C. Bhavana, and I am a dedicated third-year B.Tech student specializing in Artificial 
+                    Intelligence.With a strong interest in technology, I have developed proficiency in Python programming and have a basic understanding of 
+C,MongoDB, HTML, and CSS. 
                     <br><br>
-                    This goal drives me to explore new ideas and take on challenges that push my boundaries in meaningful ways. This portfolio highlights my current work and the steps I am taking toward achieving my ambitions.
-                    <br><br>
-                    Each project reflects my dedication to growth and discovery, as I navigate new challenges and opportunities. Feel free to explore my work and check out the links for more information on what I am currently working on.
+                    I am passionate about exploring the 
+                    potential of AI to create innovative solutions and am eager to build my 
+                    technical skills further.As a curious and fast learner, I am excited to 
+                    work on projects that allow me to grow and contribute meaningfully to 
+                    the field of Artificial Intelligence. 
                 </p>
-                <hr>
-                <div class="additional-info">
-                    This portfolio is a culmination of my learning and experience in software development, showcasing projects that reflect my skills in programming, creativity, and problem-solving.
-                    <br><br>
-                    I aim to continually expand my knowledge in areas such as machine learning, web development, and other cutting-edge technologies to stay at the forefront of the industry.
-                </div>
             </div>
         </div>
     </div>
