--- a/Academic Qualification.html
+++ b/Academic Qualification.html
@@ -11,71 +11,79 @@
     
     <style>
         body {
-            background-color: #0a2525;
-            font-family: 'Georgia', serif;
+            background-color: #f4f7fc;
+            font-family: 'Poppins', sans-serif;
             color: #333;
         }
 
         .qualification-section {
-            background-color:  #5b767f;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background: linear-gradient(135deg, #ffffff, #dde8ff);
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+            color: #333;
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .qualification-section:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
         }
 
         h1 {
-            color: #2fb4bb;
-            text-align: left;
-            margin-top: 20px;
-            font-size: 2rem;
-            font-family: serif;
+            color: #002b5b;
+            font-size: 2.5rem;
+            font-weight: 700;
+            text-align: center;
+            margin-bottom: 40px;
         }
 
         h2 {
-            color: rgb(246, 5, 246);
-            font-size: 1.5rem;
-            font-family: serif;
+            font-size: 1.8rem;
+            font-weight: 600;
+            color: #004085;
         }
 
         p {
-            font-size: 1.1rem;
-            line-height: 1.5;
-            color: rgb(252, 250, 250);
-            font-family: serif;
+            font-size: 1.2rem;
+            line-height: 1.8;
+            font-weight: 400;
+            color: #444;
         }
 
-        /* Custom navbar styling */
+        /* Custom Navbar Styling */
         .navbar-custom {
-            background-color: #2fb4bb;
+            background-color: #002b5b;
             border-radius: 10px;
+            padding: 15px;
         }
         .navbar-custom .nav-link {
             color: white;
             font-size: 1.2rem;
-            transition: color 0.3s ease, background-color 0.3s ease;
+            font-weight: 500;
+            transition: all 0.3s;
         }
         .navbar-custom .nav-link:hover {
-            color: rgb(5, 4, 18);
-            border-radius: 5px;
+            color: #ffc107;
         }
         .linkedin-icon {
             color: white;
             font-size: 1.5em;
-            transition: color 0.3s ease;
+            transition: color 0.3s;
         }
         .linkedin-icon:hover {
-            color: rgb(2, 10, 15);
+            color: #ffc107;
         }
 
         @media (max-width: 768px) {
             h1 {
-                font-size: 1.8rem;
+                font-size: 2rem;
             }
             h2 {
-                font-size: 1.3rem;
+                font-size: 1.5rem;
             }
             p {
-                font-size: 1rem;
+                font-size: 1.1rem;
             }
         }
     </style>
@@ -108,7 +116,7 @@
 
     <!-- Page Content -->
     <div class="container mt-5 pt-5">
-        <h1>Academic Qualification :</h1>
+        <h1>Academic Qualification</h1>
 
         <div class="qualification-section mt-4 mx-auto col-md-8">
             <h2>Graduation</h2>
