--- a/certificates.html
+++ b/certificates.html
@@ -8,11 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #0a2525;
+            background-color: #f4f7fc;
             font-family: serif;
+            color: #333;
         }
         h1 {
-            color: #2fb4bb;
+            color: #002b5b;
             text-align: left;
             padding: 20px;
         }
@@ -20,17 +21,17 @@
             width: 100%;
             max-width: 250px;
             margin: 5px;
-            border: 5px solid goldenrod;
+            border: 5px solid #ffc107;
             border-radius: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
         .certificate-container img:hover {
             transform: scale(1.05);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
         }
         .navbar-custom {
-            background-color: #2fb4bb;
+            background-color: #002b5b;
             border-radius: 10px;
         }
         .navbar-custom .nav-link {
@@ -39,7 +40,7 @@
             transition: color 0.3s ease, background-color 0.3s ease;
         }
         .navbar-custom .nav-link:hover {
-            color: rgb(5, 4, 18);
+            color: #ffc107;
             border-radius: 5px;
         }
         .linkedin-icon {
@@ -48,7 +49,7 @@
             transition: color 0.3s ease;
         }
         .linkedin-icon:hover {
-            color: rgb(2, 10, 15);
+            color: #ffc107;
         }
     </style>
 </head>
@@ -61,7 +62,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="About me.html">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About me.html">Profile</a></li>
                     <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Credentials</a></li>
                     <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
@@ -80,19 +81,19 @@
         <h1>Certificates :</h1>
         <div class="row certificate-container justify-content-center">
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="c1.jpg" alt="Certificate 1">
+                <img src="images/c1.jpg" alt="Certificate 1">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="c2.jpg" alt="Certificate 2">
+                <img src="images/c2.jpg" alt="Certificate 2">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="c3.jpg" alt="Certificate 3">
+                <img src="images/c3.jpg" alt="Certificate 3">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="c4.jpg" alt="Certificate 4">
+                <img src="images/c4.jpg" alt="Certificate 4">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="c5.jpg" alt="Certificate 5">
+                <img src="images/c5.jpg" alt="Certificate 5">
             </div>
         </div>
     </div>
@@ -100,3 +101,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
